--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,21 @@ font-family: 'Roboto', sans-serif;
 .ui-menu-color-download {
     background-color: #525252;
 }
+/*----------------------------------------------Special paddings/margins/text */
+
+h1, h2, h3. h4 {
+    margin: 0;
+}
+
+.uppercase {
+    text-transform: uppercase;
+}
+
+.general-sub {
+    font-family: 'Exo', sans-serif;
+    font-weight: 300;
+    color: #fafafa;
+}
 
 /*----------------------------------------------Heading */
 header {
@@ -111,9 +126,18 @@ header {
     letter-spacing: 2px;   
 }
 
-/*----------------------------------------------Hover.CSS */
+ 
 
 .hvr-sweep-to-bottom:before {
     background: rgba(0, 0, 0, 0.2);
     height: 120px;
+}
+
+/*----------------------------------------------Footer */
+
+footer {
+    background-color: #525252;
+    color: #fafafa;
+    min-height: 120px;
+    margin: 0;
 }
