--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,10 @@ font-family: 'Roboto', sans-serif;
     background-color: #676767;
 }
 
+.bg-color-personal-info {
+    background-color: #f4f4f4;
+}
+
 .bg-color-three-reasons {
     background-color: white;
 }
@@ -219,3 +223,4 @@ footer {
  .three-reasons-heading {
     margin-bottom: 15px;
  }
+
