--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,10 @@ font-family: 'Roboto', sans-serif;
     background-color: #9b59b6;
 }
 
+.bg-color-contact {
+    background-color: white;
+}
+
 .ui-menu-color-home {
     background-color: #e67e22;
 }
@@ -73,6 +77,7 @@ h1, h2, h3, h4 {
     margin-top: 25px;
     margin-bottom: 45px;
 }
+
 /*----------------------------------------------Heading */
 header {
     margin: 0;
@@ -331,4 +336,38 @@ footer {
 
 .history-items {
     margin-bottom: 30px;
+}
+
+/*----------------------------------------------Contact form */
+
+.contact-heading {
+    font-family: 'Exo', sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 20px;
+}
+
+.center-form {
+    padding-top: 10px;
+    margin: 0 auto;
+    max-width: 70%;
+}
+
+button[type="submit"] {
+    margin-top: 15px;
+    margin-bottom: 20px;
+    color: #fafafa;
+    background-color: #e84610;
+}
+
+/*----------------------------------------------Media Queries */
+
+
+@media(min-width: 992px) {
+    .center-form {
+        padding-top: 30px;
+        min-height: 240px;
+        margin: 0 auto;
+        max-width: 50%;
+    }
 }
