--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,14 @@ font-family: 'Roboto', sans-serif;
 .ui-menu-color-download {
     background-color: #525252;
 }
+
+.ui-menu-color-github {
+    background-color: #1c4a6c;
+}
+
+.ui-menu-color-interests {
+    background-color: #e74c3c;
+}
 /*----------------------------------------------Special paddings/margins/text */
 
 h1, h2, h3, h4 {
